--- a/www/css/styles-edit-my-profile.css
+++ b/www/css/styles-edit-my-profile.css
@@ -24,7 +24,7 @@
       content: '\f073';
       font-family: 'FontAwesome';
       font-size: 20px;
-      top: 3px;
+      top: -0.7rem;
       left: 0;
     }
 .slim:after {
